#17 - Use minified css in html templates, make sure the font-awesome iconset is included in every page, removing iconsmind icon set wherever possible, enable sourcemap

--- a/src/Hosted/themekit/media/icons/fontawesome/icons.css
+++ b/src/Hosted/themekit/media/icons/fontawesome/icons.css
@@ -79,3 +79,21 @@
 .fa-rss:before {
   content: "\f09e";
 }
+
+/* Other icons */
+
+.fa-user-graduate:before {
+    content: "\f501";
+}
+
+.fa-calendar-alt:before {
+    content: "\f073";
+}
+
+.fa-user-alt:before {
+    content: "\f406";
+}
+
+.fa-chart-bar:before {
+    content: "\f080";
+}
