--- a/src/Hosted/assets/custom.scss
+++ b/src/Hosted/assets/custom.scss
@@ -431,7 +431,8 @@ nav {
 }
 .user-information {
 	text-align: center;
-	margin-top: 60px;
+	margin-top: 120px;
+    margin-bottom: 20px
 }
 
 .user-name {
@@ -444,6 +445,19 @@ nav {
 .user-social {
 	i {
 		color: #666666;
+	}
+	a {
+		padding: 10px 20px 10px 20px;
+		text-decoration: none;
+		color: cornflowerblue;
+		font-weight: bold;
+		background-color: aliceblue;
+	}
+	a.rss i {
+		color: tomato;
+	}
+	a.atom i {
+		color: royalblue;
 	}
 }
 
