--- a/src/Hosted/assets/skin.css
+++ b/src/Hosted/assets/skin.css
@@ -9,20 +9,6 @@
 *
 */
 
-@font-face {
-    font-family: 'Jost';
-    src: url('media/fonts/Jost-Book.woff2') format('woff2'), url('media/fonts/Jost-Book.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Jost';
-    src: url('media/fonts/Jost-Medium.woff2') format('woff2'), url('media/fonts/Jost-Medium.woff') format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
-
 /* 
 
 # ANIMATIONS E GLOBAL
@@ -944,14 +930,14 @@ ul .icon-list.icon-list-11 li {
 
 
 body, textarea {
-    font-family: 'Jost', sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.5em;
     font-size: 17px;
     font-weight: 400;
 }
 
 button, .input-text, .input-select, .input-textarea {
-    font-family: 'Jost', sans-serif;
+    font-family: sans-serif;
     font-size: 15px;
 }
 
@@ -1180,7 +1166,7 @@ body > nav.menu-icon .menu-brand {
 
 .menu-cnt > ul > li > a, .dropdown > ul > li > a, .dropdown-submenu > ul > li > a, nav .col a {
     height: 50px;
-    line-height: 50px;
+    line-height: 52px;
     font-size: 18px;
     letter-spacing: .3px;
 }
@@ -1307,7 +1293,7 @@ footer .menu-inner li {
 footer .menu-inner li > a {
     height: 32px;
     line-height: 32px;
-    font-size: 25px;
+    font-size: 22px;
     opacity: .7;
 }
 
