--- a/src/Hosted/assets/custom.scss
+++ b/src/Hosted/assets/custom.scss
@@ -405,7 +405,18 @@ h1, h2, h3, h4, h5 {
 	}
 }
 
-nav {
+nav.dark {
+	.menu-cnt {
+		& > ul {
+			& > li {
+				& > a {
+					color: #47b2e4 !important;
+				}
+			}
+		}
+	}
+}
+nav.light {
 	&.menu-transparent {
 		&:not(.scroll-menu) {
 			&:not(.mega-dropdown) {
@@ -413,7 +424,7 @@ nav {
 					& > ul {
 						& > li {
 							& > a {
-								color: #47b2e4 !important;
+								color: white !important;
 							}
 						}
 					}
