--- a/src/Hosted/assets/custom.scss
+++ b/src/Hosted/assets/custom.scss
@@ -524,13 +524,129 @@ nav.light {
 	color: white;
 	text-decoration: none;
 
-	.menu-transparent:not(.scroll-menu) &, .menu-transparent.dark & {
+	.menu-transparent:not(.scroll-menu) &, .dark & {
 		color: #47b2e4;
+	}
+
+	.title-alternative {
+		color: #ccc;
+		margin-left: 0px;
+		font-size: 1em;
 	}
 }
 
-.menu-title .title-alternative {
-    color: #ccc;
-    margin-left: 0px;
-    font-size: 1em;
+.cnt-box-team {
+	.caption {
+		h2 {
+			&::before {
+				content: none;
+			}
+		}
+	}
+}
+
+.custom-timeline {
+	position: relative;
+	list-style: none;
+	padding: 0;
+
+	&:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		width: 5px;
+		background: #aaaaaa;
+		left: 20%;
+		margin-left: -10px;
+
+		@media screen and (max-width: 760px) {
+			display: none;
+		}
+	}
+
+	& li {
+		position: relative;
+	}
+
+	.year {
+		display: block;
+		width: 25%;
+		padding-right: 100px;
+		position: absolute;
+		top: 1em;
+		text-align: right;
+		font-size: 1.5em;
+		color: #587790;
+
+		@media screen and (max-width: 760px) {
+			display: none;
+		}
+	}
+
+	.tl-content {
+		margin: 0 0 15px 25%;
+		color: #587790;
+		padding: 0.5em 2em 0.5em 1em;
+		font-weight: 300;
+		line-height: 1.4;
+		position: relative;
+		border-radius: 5px;
+
+		h2 { 
+			margin-top: 0px;
+			padding: 0 0 10px 0;
+			border-bottom: 1px solid #aaaaaa;
+		}
+
+		@media screen and (max-width: 760px) {
+			margin: 0px;
+		}
+	}
+
+	.tl-small-date {
+		display: none;
+
+		@media screen and (max-width: 760px) {
+			display: inline-block;
+		}
+	}
+}
+
+.sponsor-logo {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+
+	&-holder {
+		height: 20vh;
+		position: relative;
+	}
+
+	&-fpbud {
+		max-width: 60% !important;
+	}
+
+	&-icfp {
+		max-width: 100% !important;
+	}
+
+	&-fpdays {
+		max-width: 50% !important;
+	}
+
+	&-cefp {
+		max-width: 100% !important;
+	}
+}
+
+.cnt-box-team, .cnt-box-team:hover {
+	.caption {
+		@media screen and (max-width: 992px) {
+			height: unset;
+			position: unset;
+			padding-top: 0px;
+		}
+	}
 }
