--- a/src/Hosted/assets/custom.css
+++ b/src/Hosted/assets/custom.css
@@ -371,6 +371,12 @@ pre:not(.hljs) {
     color: #FFF;
 }
 
+@media (max-width: 991.98px) {
+	.dropdown:hover > a:after, .menu-cnt li.active:hover > a:after {
+		transform: translateY(-50%) rotate(90deg) matrix(-1, 0, 0, 1, 0, 0);
+	}
+}
+
 .form-ajax .success-box, .form-ajax .error-box {
 	display: none;
 	margin-top: 20px;
